refactor: добавлена проверка существования пользователя при создании задачи и реорганизация репозиториев
